--- a/templates/about.html
+++ b/templates/about.html
@@ -32,25 +32,25 @@
             </ul>
         </div>
     </nav>
-    <div class="row justify-content-md-center pt-3">
-        <h2><b>Data Scientists</b></h2>
+    <div class="row justify-content-md-center p-3 my-3">
+        <h2><b>Meet The Data Scientists</b></h2>
     </div>
     <div class="container-fluid">
         <div class="row justify-content-md-center">
             <div class="col col-lg-6">
                 <dt style="color:black">Ahasan Hossain</dt>
                 <dd>
-                    <a href="https://www.linkedin.com/in/ahasan-hossain/"><img src="https://media-exp1.licdn.com/dms/image/C4E03AQG23CUiKSde-w/profile-displayphoto-shrink_400_400/0?e=1605139200&v=beta&t=RKwIbKiWDFZeNVhXK9O2uKC4LC_cThLx8PFxffo55BY" style="width:400px;height:400px;" alt="Ahasan"></a>
+                    <a href="https://www.linkedin.com/in/ahasan-hossain/" target="_blank"><img src="https://media-exp1.licdn.com/dms/image/C4E03AQG23CUiKSde-w/profile-displayphoto-shrink_400_400/0?e=1605139200&v=beta&t=RKwIbKiWDFZeNVhXK9O2uKC4LC_cThLx8PFxffo55BY" style="width:400px;height:400px;" alt="Ahasan"></a>
                 </dd>
-                <dd><a href="https://www.linkedin.com/in/ahasan-hossain/"><b>LinkedIn</b></a></dd>
+                <dd><a href="https://www.linkedin.com/in/ahasan-hossain/" target="_blank"><b>LinkedIn</b></a></dd>
                 <dd>UTA graduate with a major in Finance and Economics. Dedicated, and detail-oriented individual who's career interest is within data science, product development and process improvement.</dd>
             </div>
             <div class="col col-lg-6">
                 <dt style="color:black">Luis Cerrilla</dt>
                 <dd>
-                    <a href="https://www.linkedin.com/in/luis-cerrilla-noriega/"><img src="https://media-exp1.licdn.com/dms/image/C4E03AQE9JKl5DRN09w/profile-displayphoto-shrink_400_400/0?e=1605139200&v=beta&t=W0EoefLzLXYCcBT5xueplOsb9lXZpGsBm_DO5TSMhF8" style="width:400px;height:400px;" alt="Luis"></a>
+                    <a href="https://www.linkedin.com/in/luis-cerrilla-noriega/" target="_blank"><img src="https://media-exp1.licdn.com/dms/image/C4E03AQE9JKl5DRN09w/profile-displayphoto-shrink_400_400/0?e=1605139200&v=beta&t=W0EoefLzLXYCcBT5xueplOsb9lXZpGsBm_DO5TSMhF8" style="width:400px;height:400px;" alt="Luis"></a>
                 </dd>
-                <dd><a href="https://www.linkedin.com/in/luis-cerrilla-noriega/"><b>LinkedIn</b></a></dd>
+                <dd><a href="https://www.linkedin.com/in/luis-cerrilla-noriega/" target="_blank"><b>LinkedIn</b></a></dd>
                 <dd>Finance and business background with a global view and 12 years of experience in the Financial Industry. Multidisciplinary, driven Data Analyst with a passion for condensing large data into a simple to understand story. Focused on the
                     end goal using teamwork to provide the highest level of service.</dd>
             </div>
@@ -59,18 +59,18 @@
             <div class="col col-lg-6">
                 <dt style="color:black">Kyle Cielencki</dt>
                 <dd>
-                    <a href="https://www.linkedin.com/in/kylecielencki/"><img src="https://media-exp1.licdn.com/dms/image/C4E03AQHpIxuXzzwGAw/profile-displayphoto-shrink_400_400/0?e=1605139200&v=beta&t=yRgNMfv8ah0J9nBdfF7JoHgE1qnG7ofi432xiBOH904" style="width:400px;height:400px;" alt="Kyle"></a>
+                    <a href="https://www.linkedin.com/in/kylecielencki/" target="_blank"><img src="https://media-exp1.licdn.com/dms/image/C4E03AQHpIxuXzzwGAw/profile-displayphoto-shrink_400_400/0?e=1605139200&v=beta&t=yRgNMfv8ah0J9nBdfF7JoHgE1qnG7ofi432xiBOH904" style="width:400px;height:400px;" alt="Kyle"></a>
                 </dd>
-                <dd><a href="https://www.linkedin.com/in/kylecielencki/"><b>LinkedIn</b></a></dd>
+                <dd><a href="https://www.linkedin.com/in/kylecielencki/" target="_blank"><b>LinkedIn</b></a></dd>
                 <dd>Kyle is a graduate of Texas State University and currently works at Comerica Bank as a Underwriting Associate in the Corporate Banking Group. Interests include geographic visualizations, anything pertaining to a normal distribution and
                     formatting things to make them look "pretty."</dd>
             </div>
             <div class="col col-lg-6">
                 <dt style="color:black">Arthur Edwards</dt>
                 <dd>
-                    <a href="https://www.linkedin.com/in/arthur-edwards-iii-318a7049/"><img src="https://media-exp1.licdn.com/dms/image/C5603AQGmKY0TAKuPIw/profile-displayphoto-shrink_400_400/0?e=1605139200&v=beta&t=DJF02sc7OucnHt2_flvaX2dJop7eIzPwMGHDU3ZeqP0" style="width:400px;height:400px;" alt="Artie"></a>
+                    <a href="https://www.linkedin.com/in/arthur-edwards-iii-318a7049/" target="_blank"><img src="https://media-exp1.licdn.com/dms/image/C5603AQGmKY0TAKuPIw/profile-displayphoto-shrink_400_400/0?e=1605139200&v=beta&t=DJF02sc7OucnHt2_flvaX2dJop7eIzPwMGHDU3ZeqP0" style="width:400px;height:400px;" alt="Artie"></a>
                 </dd>
-                <dd><a href="https://www.linkedin.com/in/arthur-edwards-iii-318a7049/"><b>LinkedIn</b></a></dd>
+                <dd><a href="https://www.linkedin.com/in/arthur-edwards-iii-318a7049/" target="_blank"><b>LinkedIn</b></a></dd>
                 <dd>Arthur is native of South Louisiana who moved to Dallas, TX and throughout the years found his passion by founding Third Level Consultant. During the process of developing a small business, his passion started at Full Sail University.
                     While at Full Sail he found passion in banding and marketing and worked for retail and marketing companies that sharped his skills. He has a Bachelor of Science degree in Entertainment Management/ Branding & Marketing and pursing a
                     Certification in Data Science.</dd>
@@ -78,6 +78,9 @@
             </div>
         </div>
     </div>
+    <footer>
+        <p>Authors: Luis Cerilla, Arthur Edwards, Ahasan Hossain, Kyle Cielencki<br>
+    </footer>
 </body>
 
 </html>
