--- a/templates/index.html
+++ b/templates/index.html
@@ -32,12 +32,18 @@
             </ul>
         </div>
     </nav>
-    <div class="container-fluid">
+    <div class="container-fluid p-3 my-3">
+        <div class="row justify-content-md-center">
+            <h1 style="font-size:60px;"><b>Welcome!</b></h1>
+        </div>
         <div class="row justify-content-md-center">
             <img src="static\Pictures\logo.png" alt="MAS370" width="900" height="420">
-            <h5><b>A data science journey by Luis Cerrilla, Ahasan Hossain, Kyle Cielencki and Artie Edwards</b></h5>
+            <h5><b>Brought to you by Luis Cerrilla, Ahasan Hossain, Kyle Cielencki and Artie Edwards</b></h5>
         </div>
     </div>
+    <footer>
+        <p>Authors: Luis Cerilla, Arthur Edwards, Ahasan Hossain, Kyle Cielencki<br>
+    </footer>
 </body>
 
 </html>
