--- a/templates/methodology.html
+++ b/templates/methodology.html
@@ -33,18 +33,18 @@
         </div>
     </nav>
     <div class="container-fluid p-3 my-3">
-        <div class="row justify-content-md-center p-3 my-3">
+        <div class="row justify-content-md-center">
             <h2><b>About the Predictor</b></h2>
         </div>
         <div class="row justify-content-md-left p-3 my-3">
             <h6><b>1. Data Gathering</b></h6>
             <p>
                 The data used in this app is from the
-                <a href="https://www.transtats.bts.gov/Tables.asp?DB_ID=125&DB_Name=Airline%20Origin%20and%20Destination%20Survey%20%28DB1B%29&DB_Short_Name=Origin%20and%20Destination%20Survey">Bureau of Transportation Statistics</a> Airline Origin and
-                Destination Survey ("DB1BCoupon" and "DB1BTicket" tables).
+                <a href="https://www.transtats.bts.gov/Tables.asp?DB_ID=125&DB_Name=Airline%20Origin%20and%20Destination%20Survey%20%28DB1B%29&DB_Short_Name=Origin%20and%20Destination%20Survey" target="_blank">Bureau of Transportation Statistics</a> Airline
+                Origin and Destination Survey ("DB1BCoupon" and "DB1BTicket" tables).
                 <br>
                 <br>To make more meaningful data visualizations, we included the airport names, city names and coordinates (latitude, longitude). This required finding an appropriate
-                <a href="https://www.kaggle.com/aravindram11/list-of-us-airports">dataset</a> that contained these fields. We then joined this data to the BTS data using Python Pandas library.
+                <a href="https://www.kaggle.com/aravindram11/list-of-us-airports" target="_blank">dataset</a> that contained these fields. We then joined this data to the BTS data using Python Pandas library.
                 <br>
                 <br>We based our visualizations on a random 5% sample of the last three years of data. This data was combined with an airport city, latitiude and longitude for better visualizations. These can be found on the "Visualizations" page.
                 <br>
@@ -68,10 +68,12 @@
                     <br>Most customers purchased only one ticket per itinerary. There were some outliers in which there were 100+ tickets ordered. We limited our dataset to tickets with passengers less than 100 (instances with 50+ were left in as they
                     did not bring down the "Price per ticket").
                 </li>
+                <br>
                 <li><b>Miles flown:</b>
                     <br><img src="static/Pictures/MilesFlownPlot.png">
-                    <br>The median flight distance flown is ~874 miles (roughly the distance between Minneapolis and Denver). The vast majority of values fall under 2,000 miles; however, there are some outliers in the 3,000-5,000+ miles traveled range.
+                    <br>The median flight distance flown is ~874 miles (roughly the distance between Minneapolis and Denver). The vast majority of values fall under 2,000 miles; however, there were some outliers in the 3,000-5,000+ miles traveled range.
                 </li>
+                <br>
                 <li><b>Ticket prices:</b>
                     <br><img src="static/Pictures/TixPricePlot.png">
                     <br>The median price per passenger is ~$451. The vast majority of prices fall under $1,000 with a number of outliers.
@@ -91,6 +93,9 @@
         </div>
     </div>
     </div>
+    <footer>
+        <p>Authors: Luis Cerilla, Arthur Edwards, Ahasan Hossain, Kyle Cielencki<br>
+    </footer>
 </body>
 
 </html>
