--- a/templates/visualizations.html
+++ b/templates/visualizations.html
@@ -114,4 +114,7 @@
             vizElement.parentNode.insertBefore(scriptElement, vizElement);
         </script>
     </div>
+    <footer>
+        <p>Authors: Luis Cerilla, Arthur Edwards, Ahasan Hossain, Kyle Cielencki<br>
+    </footer>
 </body>
