--- a/templates/predictor.html
+++ b/templates/predictor.html
@@ -44,7 +44,7 @@
         </div>
     </nav>
     <div class="container-fluid" style="background-image: url('https://www.metoffice.gov.uk/binaries/content/gallery/metofficegovuk/hero-images/weather/cloud/stratocumulus-cloud.jpg')">
-        <div class="row justify-content-md-center pt-3">
+        <div class="row justify-content-md-center p-5">
             <h2><b>Flight Price Predictor</b></h2>
         </div>
         <div class="row justify-content-md-center pt-3">
@@ -72,14 +72,17 @@
             <h1 id="priceOutput" style="color:red; font-size:80px; font-weight: bold; text-align:center; border-style:solid; border-color:red"></h1>
         </div>
         <div class="row justify-content-lg-center pt-3">
+            <h4 class="bon_voyage" id="bon_voyage" style="font-style: italic; color:red; text-align: right;"></h4>
         </div>
         <div class="row justify-content-lg-center pt-3">
         </div>
         <div class="row justify-content-lg-center pt-3">
-            <h4 style="font-style: italic; color:red; text-align: right;">enjoy your trip!</h4>
         </div>
     </div>
     <script src="https://d3js.org/d3.v6.min.js" charset="utf-8"></script>
     <script src="../static/js/app.js"></script>
     <script src="../static/js/predictions.js"></script>
+    <footer>
+        <p>Authors: Luis Cerilla, Arthur Edwards, Ahasan Hossain, Kyle Cielencki<br>
+    </footer>
 </body>
